src/content/styles/layout/_main.scss
rv-appbar {
    position: absolute;
    transition: opacity $swift-ease-in-duration $swift-ease-in-out-timing-function;

    @include media($rv-gt-sm) {
        left: $viewport-gutter;
        top: $viewport-gutter;
    }

    @include media($rv-sm) {
        width: 100%;
    }
}

md-toast.md-rv-flex-global {
    display: flex;
    width: 100%;
    justify-content: center;
}

// we use pointers-events to make click event pass through parent div. If it creates problem go with this solution:
// position toast relatively, set the app container to flexbox, and align toast using justify-content and align-items.
md-toast {
    pointer-events: none;

    .md-toast-content {
        pointer-events: auto;
    }

    .md-toast-content span {
        flex-basis: auto;
    }
}

rv-panel {
    opacity: 1;
    transition: opacity $swift-ease-in-duration $swift-ease-in-out-timing-function;

    md-toast.md-rv-flex {
        width: 100%;
        padding: {
            left: 0;
            right: 0;
            bottom: 0;
        }
    }
}

div.md-button {
    margin-bottom: -10px;
}

rv-panel[type='filters'] {

    @include media($rv-sm) {
        &.default, &.full, &.attached {
            @include active-panel-plug($left: 0, $top: 0, $right: 0, $bottom: 0, $width: 100%, $from: right);
            z-index: 1;
        }
    }

    @include media($rv-gt-sm) {
        &.default {
            @include active-panel-plug($left: $viewport-gutter * 2 + $toolbar-width, $top: $viewport-gutter, $right: $viewport-gutter, $bottom: 50%);
        }

        &.full {
            @include active-panel-plug($left: $viewport-gutter * 2 + $toolbar-width, $top: $viewport-gutter, $right: $viewport-gutter, $bottom: $viewport-gutter);
        }

        &.attached {
            @include active-panel-plug($left: $viewport-gutter + $toolbar-width, $top: $viewport-gutter + $toolbar-height + 1, $width: 300px, $bottom: $viewport-gutter);

            &:before {
                content: "";
                position: absolute;
                top: 0;
                left: 0;
                bottom: 0;
                width: 1px;
                border-left: 1px solid $divider-color;
                z-index: 1;
            }

            &.ng-animate {
                &:before {
                    bottom: 10px;
                }
            }
        }
    }

    &.minimized {
        @include active-panel-plug($left: $viewport-gutter * 2 + $toolbar-width, $top: $viewport-gutter, $right: $viewport-gutter, $height: 100px);
    }

    rv-filters-default {
        @include content-plug;
    }
}

rv-panel[type='main'] {

    @include media($rv-gt-sm) {
        @include active-panel-plug($left: $viewport-gutter, $top: $viewport-gutter + $toolbar-height + 1, $bottom: $viewport-gutter, $width: $toolbar-width, $from: top);
    }

    @include media($rv-sm) {
        @include active-panel-plug($left: 0, $top: $toolbar-height, $bottom: 0, $width: 100%, $from: top);
        z-index: 1;
    }

    &:before {
        content: "";
        position: absolute;
        top: -1px;
        left: 0;
        right: 0;
        height: 1px;
        z-index: 1;

        @include media($rv-gt-sm...) {
            border-top: 1px solid $divider-color;
        }
    }

    &.ng-animate {
        &:before {
            left: 10px;
            right: 10px;
        }
    }

    rv-toc,
    rv-toolbox {
        @include content-plug;
    }
}

rv-panel[type='side'] {

    @include media($rv-gt-sm) {
        @include active-panel-plug($left: $viewport-gutter + $toolbar-width, $top: $viewport-gutter, $bottom: $viewport-gutter, $width: $side-panel-width, $from: left);
    }

    @include media($rv-sm) {
        @include active-panel-plug($left: 0, $top: 0, $bottom: 0, $width: 100%, $from: right);
        z-index: 1;
    }

    &:before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        width: 1px;
        z-index: 1;

        @include media($rv-gt-sm) {
            border-left: 1px solid $divider-color;
        }
    }

    &.ng-animate {
        &:before {
            top: $viewport-gutter;
            bottom: $viewport-gutter;
        }
    }

    rv-settings,
    rv-metadata-panel {
        @include content-plug;
    }
}

rv-panel[type='other'] {
    @include active-panel-plug($right: 0, $top: 0, $bottom: 0, $width: 300px, $from: right);

    .rv-panel {
        //background-color: rgba(0,0,0,0.68);
        background-color: rgba(#fff,.68);
        //color: white;
    }
}

md-content {
    background-color: #fff;
}

